--- a/pca/ho.html
+++ b/pca/ho.html
@@ -121,7 +121,9 @@
   <select type="select" id="thermostat" onchange="changeparams()">
     <option value="Andersen">Andersen</option>
     <option value="Langevin" selected>Langevin</option>
-    <option value="vrescale">Velocity rescaling (with velocity swaps, still not ergodic!)</option>
+    <option value="random_collision_MC">Random collision (Monte Carlo)</option>
+    <option value="random_collision_Langevin">Random collision (Langevin equation)</option>
+    <option value="vrescale">Velocity rescaling (NOT ergodic!)</option>
   </select>
   <br>
   </div>
@@ -177,10 +179,8 @@
   </div>
 
   <div>
-    <small>
-      <a href="https://www.dropbox.com/sh/onk84wg8typmwa4/AAC9yedXDUt7DmrfBYBzOYGHa?dl=0">Link</a>
-      to the full source code.
-    </small>
+    <a href="https://www.dropbox.com/sh/onk84wg8typmwa4/AAC9yedXDUt7DmrfBYBzOYGHa?dl=0">Link</a>
+    to the full source code.
   </div>
 
 </form>
