improve the velocity rescaling thermostat

--- a/pca/ho.html
+++ b/pca/ho.html
@@ -120,10 +120,8 @@
   Thermostat:
   <select type="select" id="thermostat" onchange="changeparams()">
     <option value="Andersen">Andersen</option>
-    <option value="Langevin" selected>Langevin</option>
-    <option value="random_collision_MC">Random collision (Monte Carlo)</option>
-    <option value="random_collision_Langevin">Random collision (Langevin equation)</option>
-    <option value="vrescale">Velocity rescaling (NOT ergodic!)</option>
+    <option value="Langevin">Langevin</option>
+    <option value="vrescale" selected>Velocity rescaling</option>
   </select>
   <br>
   </div>
