add ho force-field recovery

--- a/pca/ho.html
+++ b/pca/ho.html
@@ -170,7 +170,19 @@
 
   <hr>
 
+  <table>
+    <tr>
+      <th>Original Hessian matrix</th>
+      <th>Recovered Hessian matrix</th>
+    </tr>
+    <tr>
+      <td> <canvas id="hessplot" width="380" height="380"></canvas> </td>
+      <td> <canvas id="hessbplot" width="380" height="380"></canvas> </td>
+    </tr>
+  </table>
 
+  <div class="panel">
+    <div class="panel-title">Source code</div>
 
   <div>
   The equivalent C code: <a href="ho.c">ho.c</a>.
@@ -179,6 +191,7 @@
   <div>
     <a href="https://www.dropbox.com/sh/onk84wg8typmwa4/AAC9yedXDUt7DmrfBYBzOYGHa?dl=0">Link</a>
     to the full source code.
+  </div>
   </div>
 
 </form>
