remove ho1d.tex, small fixes
ho1d.tex --> hochain.tex in scinotes

--- a/pca/ho.html
+++ b/pca/ho.html
@@ -17,6 +17,11 @@
   Principle component analysis (PCA) for a harmonic-oscillator chain
 </h2>
 
+<div class="float_right">
+  <h4>Notes</h4>
+  <a href="doc/hochain.pdf">The analytic solution of a uniform chain</a>.
+</div>
+
 <form>
   Number of particles
   <span class="math"><i>N</i></span>:
