--- a/pca/ho.html
+++ b/pca/ho.html
@@ -19,7 +19,10 @@
 
 <div class="float_right">
   <h4>Notes</h4>
-  <a href="doc/hochain.pdf">The analytic solution of a uniform chain</a>.
+  <ul>
+    <li><a href="doc/hochain.pdf">The analytic solution of a uniform chain</a>.</li>
+    <li><a href="doc/vrescale.pdf">Velocity-rescaling thermostat</a>.</li>
+  </ul>
 </div>
 
 <form>
