--- a/pca/ho.html
+++ b/pca/ho.html
@@ -14,7 +14,7 @@
 <body>
 
 <h2 class="center">
-  Principle component analysis (PCA) for a harmonic-oscillator chain
+  Principal component analysis (PCA) for a harmonic-oscillator chain
 </h2>
 
 <div class="float_right">
@@ -155,7 +155,7 @@
 
 
   <div class="panel">
-  <div class="panel-title">Principle component analysis (PCA)</div>
+  <div class="panel-title">Principal component analysis (PCA)</div>
 
   Do PCA every
   <input type="text" size="6" value="100000" id="nstpca"> MD steps.
