--- a/kmeans/kmeans.html
+++ b/kmeans/kmeans.html
@@ -10,13 +10,13 @@
   <script type="text/javascript" src="./js/kmeans.js"></script>
   <script type="text/javascript" src="./js/kmeans_main.js"></script>
 </head>
-<body>
+<body onload="init_gauss()">
 
 <h2 class="center">
-  K-means clustering
+  <i>K</i>-means clustering
 </h2>
 
-<form onload="change_params()">
+<form>
   Number of Gaussians:
   <input type="text" size="6" value="0" id="ngaus"
     onchange="change_params()">.
@@ -46,7 +46,7 @@
   </table>
 
   <input type="button" value="Generate" id="gen"
-    onclick="gengaus()">
+    onclick="gen_gauss()">
   <br>
 
   <canvas id="demobox" width="640px", height="640px">
