--- a/pca/ho.html
+++ b/pca/ho.html
@@ -79,9 +79,9 @@
     onchange="changeparams()">.
   <br>
 
-  Frequency of adding small-world springs between nonadjacent particles:
-  <input type="text" size="6" value="0.0" id="fsmallworld"
-    onchange="changeparams()"> (between 0 and 1).
+  Probability of small-world springs between nonadjacent particles:
+  <input type="range" min="0.0" max="1.0" step="0.01" size="6" value="0.0" id="fsmallworld"
+    onchange="changeparams()">.
   <br>
 
   Stiffness of small-world springs:
