add "use strict" to javascripts

--- a/lj/lj.html
+++ b/lj/lj.html
@@ -90,7 +90,9 @@
 
   <hr>
 
-  <canvas id="ljbox" width="400" height="400"></canvas>
+  <div style="text-align: center">
+    <canvas id="ljbox" width="480" height="480"></canvas>
+  </div>
 </form>
 
 </body>
