--- a/lj/lj.html
+++ b/lj/lj.html
@@ -46,7 +46,7 @@
 
   Temperature,
   <span class="math"><i>T</i></span>:
-  <input type="text" size="6" value="1.5" id="temp"
+  <input type="text" size="6" value="1.5" id="temperature"
     onchange="changeparams()">.
   &nbsp;
   <br>
@@ -123,6 +123,10 @@
 
   <div class="center">
     <canvas id="ljbox" width="480" height="480"></canvas>
+    <br>
+    <input id="ljscale" type="range" value="1.0"
+      min="0.05" max="3.0" step="0.01" style="width: 480px"
+      onchange="changescale()">
     <br>
     <span id="sinfo" style="width: 480px"></span>
   </div>
