na: improve visualization

--- a/toyna/na.html
+++ b/toyna/na.html
@@ -25,7 +25,7 @@
 
   Number of residues,
   <span class="math"><i>N<sub>r</sub></i></span>:
-  <input type="text" size="6" value="55" id="nr"
+  <input type="text" size="6" value="20" id="nr"
     onchange="changeparams()">.
 
   Temperature,
@@ -114,6 +114,10 @@
     <span id="sinfo" style="width: 480px"></span>
   </div>
 </form>
+
+<div class="panel">
+  <a href="https://www.dropbox.com/sh/dtfxeq5nygonrnq/AAAhHr6NytLnDqE9yY-JdmM_a">Dropbox</a>.
+</div>
 
 </body>
 </html>
