add reference structures

--- a/toyna/na.html
+++ b/toyna/na.html
@@ -107,7 +107,7 @@
   <div class="center">
     <canvas id="nabox" width="480" height="480"></canvas>
     <br>
-    <input id="nascale" type="range" value="1.0"
+    Zoom: <input id="nascale" type="range" value="1.0"
       min="0.05" max="3.0" step="0.01" style="width: 480px"
       onchange="changescale()">
     <br>
@@ -116,6 +116,7 @@
 </form>
 
 <div class="panel">
+  <div class="panel-title">Source code</div>
   <a href="https://www.dropbox.com/sh/dtfxeq5nygonrnq/AAAhHr6NytLnDqE9yY-JdmM_a">Dropbox</a>.
 </div>
 
