--- a/lj/lj.html
+++ b/lj/lj.html
@@ -124,7 +124,7 @@
   <div class="center">
     <canvas id="ljbox" width="480" height="480"></canvas>
     <br>
-    <input id="ljscale" type="range" value="1.0"
+    Zoom: <input id="ljscale" type="range" value="1.0"
       min="0.05" max="3.0" step="0.01" style="width: 480px"
       onchange="changescale()">
     <br>
