toyna: initial configuration

--- a/toyna/na.html
+++ b/toyna/na.html
@@ -111,6 +111,10 @@
       min="0.05" max="3.0" step="0.01" style="width: 480px"
       onchange="changescale()">
     <br>
+    <input type="checkbox" id="orthographic" onchange="paint()">
+    Orthographic.
+    &nbsp;
+    <br>
     <span id="sinfo" style="width: 480px"></span>
   </div>
 </form>
