--- a/toyna/na.html
+++ b/toyna/na.html
@@ -7,8 +7,9 @@
   <script type="text/javascript" src="./js/util.js"></script>
   <script type="text/javascript" src="./js/mtrand.js"></script>
   <script type="text/javascript" src="./js/draw.js"></script>
-  <script type="text/javascript" src="./js/nacore.js"></script>
   <script type="text/javascript" src="./js/vct.js"></script>
+  <script type="text/javascript" src="./js/potential.js"></script>
+  <script type="text/javascript" src="./js/nacore.js"></script>
   <script type="text/javascript" src="./js/namain.js"></script>
 </head>
 <body>
@@ -30,8 +31,8 @@
 
   Temperature,
   <span class="math"><i>T</i></span>:
-  <input type="text" size="6" value="1.5" id="temperature"
-    onchange="changeparams()">.
+  <input type="text" size="6" value="300" id="temperature"
+    onchange="changeparams()"> K.
   &nbsp;
 
   Cutoff,
@@ -54,7 +55,7 @@
   <div class="panel-title">Molecular dynamics (MD)</div>
 
   Number of MD steps per second:
-  <input type="text" size="10" value="200"
+  <input type="text" size="10" value="2000"
     id="nstepspersecmd" onchange="changeparams()">.
   <br>
 
