--- a/toyna/na.html
+++ b/toyna/na.html
@@ -8,7 +8,8 @@
   <script type="text/javascript" src="./js/mtrand.js"></script>
   <script type="text/javascript" src="./js/draw.js"></script>
   <script type="text/javascript" src="./js/vct.js"></script>
-  <script type="text/javascript" src="./js/potential.js"></script>
+  <script type="text/javascript" src="./js/nautil.js"></script>
+  <script type="text/javascript" src="./js/napot.js"></script>
   <script type="text/javascript" src="./js/nacore.js"></script>
   <script type="text/javascript" src="./js/namain.js"></script>
 </head>
@@ -41,6 +42,11 @@
     onchange="changeparams()">.
   &nbsp;
   <br>
+
+  Salt concentration,
+  <span class="math"><i>c</i></span>:
+  <input type="text" size="6" value="1.0" id="saltconc"
+    onchange="changeparams()">M.
 
   Simulation method
   <select id="simulmethod" onchange="changeparams()">
