--- a/lj/lj.html
+++ b/lj/lj.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="./js/draw.js"></script>
   <script type="text/javascript" src="./js/ljcore.js"></script>
   <script type="text/javascript" src="./js/vct.js"></script>
+  <script type="text/javascript" src="./js/mat.js"></script>
   <script type="text/javascript" src="./js/lj2d.js"></script>
   <script type="text/javascript" src="./js/lj3d.js"></script>
   <script type="text/javascript" src="./js/ljmain.js"></script>
