--- a/toyna/na.html
+++ b/toyna/na.html
@@ -7,8 +7,9 @@
   <script type="text/javascript" src="./js/util.js"></script>
   <script type="text/javascript" src="./js/mtrand.js"></script>
   <script type="text/javascript" src="./js/draw.js"></script>
-  <script type="text/javascript" src="./js/vct.js"></script>
   <script type="text/javascript" src="./js/nautil.js"></script>
+  <script type="text/javascript" src="./js/vct.js"></script>
+  <script type="text/javascript" src="./js/mat.js"></script>
   <script type="text/javascript" src="./js/napot.js"></script>
   <script type="text/javascript" src="./js/nacore.js"></script>
   <script type="text/javascript" src="./js/namain.js"></script>
