--- a/lj/lj.html
+++ b/lj/lj.html
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="./js/mat.js"></script>
   <script type="text/javascript" src="./js/lj2d.js"></script>
   <script type="text/javascript" src="./js/lj3d.js"></script>
+  <script type="text/javascript" src="./js/mdutil.js"></script>
+  <script type="text/javascript" src="./js/ljdraw.js"></script>
   <script type="text/javascript" src="./js/ljmain.js"></script>
 </head>
 <body>
