--- a/toyna/na.html
+++ b/toyna/na.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="./js/draw.js"></script>
   <script type="text/javascript" src="./js/vct.js"></script>
   <script type="text/javascript" src="./js/mat.js"></script>
+  <script type="text/javascript" src="./js/mdutil.js"></script>
   <script type="text/javascript" src="./js/nautil.js"></script>
   <script type="text/javascript" src="./js/napot.js"></script>
   <script type="text/javascript" src="./js/nacore.js"></script>
