separate mouse3d.js

--- a/lj/lj.html
+++ b/lj/lj.html
@@ -7,12 +7,13 @@
   <script type="text/javascript" src="./js/util.js"></script>
   <script type="text/javascript" src="./js/mtrand.js"></script>
   <script type="text/javascript" src="./js/draw.js"></script>
-  <script type="text/javascript" src="./js/ljcore.js"></script>
+  <script type="text/javascript" src="./js/mouse3d.js"></script>
   <script type="text/javascript" src="./js/vct.js"></script>
   <script type="text/javascript" src="./js/mat.js"></script>
+  <script type="text/javascript" src="./js/mdutil.js"></script>
   <script type="text/javascript" src="./js/lj2d.js"></script>
   <script type="text/javascript" src="./js/lj3d.js"></script>
-  <script type="text/javascript" src="./js/mdutil.js"></script>
+  <script type="text/javascript" src="./js/ljcore.js"></script>
   <script type="text/javascript" src="./js/ljdraw.js"></script>
   <script type="text/javascript" src="./js/ljmain.js"></script>
 </head>
