--- a/toyna/na.html
+++ b/toyna/na.html
@@ -7,12 +7,14 @@
   <script type="text/javascript" src="./js/util.js"></script>
   <script type="text/javascript" src="./js/mtrand.js"></script>
   <script type="text/javascript" src="./js/draw.js"></script>
+  <script type="text/javascript" src="./js/mouse3d.js"></script>
   <script type="text/javascript" src="./js/vct.js"></script>
   <script type="text/javascript" src="./js/mat.js"></script>
   <script type="text/javascript" src="./js/mdutil.js"></script>
   <script type="text/javascript" src="./js/nautil.js"></script>
   <script type="text/javascript" src="./js/napot.js"></script>
   <script type="text/javascript" src="./js/nacore.js"></script>
+  <script type="text/javascript" src="./js/nadraw.js"></script>
   <script type="text/javascript" src="./js/namain.js"></script>
 </head>
 <body>
