cago: code clean up

--- a/cago/cago.html
+++ b/cago/cago.html
@@ -100,7 +100,7 @@
 
   Atoms for defining contacts:
   <select id="contact_type" onchange="changeparams()">
-    <option value="CA"><i>&alpha;</i>-carbon</option>
+    <option value="CA">&alpha;-carbon</option>
     <option value="Heavy" selected>Heavy (non-hydrogen)</option>
     <option value="All">All</option>
   </select>
