ising: add javascript

--- a/kmeans/kmeans.html
+++ b/kmeans/kmeans.html
@@ -82,7 +82,7 @@
     <input type="button" value="Do clustering!" id="clus"
       class="largebtn" onclick="show()">
 
-    <canvas id="demobox" width="920px", height="640px">
+    <canvas id="demobox" width="920px" height="640px">
     </canvas>
   </div>
 
