improve thermostats in lj.html

--- a/lj/lj.html
+++ b/lj/lj.html
@@ -89,7 +89,7 @@
 
 
   <div class="column">
-  
+
   <div class="panel">
   <div class="panel-title">Molecular dynamics (MD)</div>
 
@@ -165,10 +165,11 @@
         onchange="changescale()">
       <br>
     </div>
-    
+
     <div style="width:400px; display:inline-block; float:left; margin:10px">
       <div id="histplot"></div>
-      <div id="sinfo" style="margin-top:30px; text-align:left"></span>
+      <div id="sinfo" style="margin-top:30px; text-align:left"></div>
+      <div id="corrplot"></div>
     </div>
   </div>
 </form>
