lj.html add velocity autocorrelation function

--- a/lj/lj.html
+++ b/lj/lj.html
@@ -134,6 +134,11 @@
   <input type="text" size="6" value="1.0" id="nhcmass2"
     onchange="changeparams()">.
   &nbsp;
+  <br>
+
+  Number of particles for the velocity <span title="autocorrelation function">ACF</span>:
+  <input type="text" size="6" value="5" id="vactsize"
+    onchange="changeparams()">.
   </div>
 
   </div> <!-- column 2 -->
