move a few files, add ace.js

--- a/mtrand/rand.html
+++ b/mtrand/rand.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="./js/mtrand.js"></script>
   <script type="text/javascript" src="./js/tausrand.js"></script>
   <script type="text/javascript" src="./js/rand_main.js"></script>
-  <script type="text/javascript" src="./js/dygraph-combined.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined.js"></script>
 </head>
 <body onload="init_gauss()">
 
