--- a/pca/ho.html
+++ b/pca/ho.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <title> Harmonic Oscillator </title>
   <link rel="stylesheet" type="text/css" href="./css/default.css" />
-  <script type="text/javascript" src="./js/dygraph-combined.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined.js"></script>
   <script type="text/javascript" src="./js/util.js"></script>
   <script type="text/javascript" src="./js/mtrand.js"></script>
   <script type="text/javascript" src="./js/lu.js"></script>
