lj: improve code for autocorrelation

--- a/lj/lj.html
+++ b/lj/lj.html
@@ -155,7 +155,7 @@
     <input type="button" value="Stop"
       id="stop" class="largebtn" onclick="stopsimul()">
 
-    <input type="reset" value="Reset"
+    <input type="button" value="Reset"
       id="reset" class="largebtn" onclick="resetdata()">
   </div>
 
