add adaptive velocity rescaling code

--- a/lj/lj.html
+++ b/lj/lj.html
@@ -108,6 +108,7 @@
     <option value="v-rescale">(Langevin) velocity-rescaling</option>
     <option value="Nose-Hoover">Nos&eacute;-Hoover chain</option>
     <option value="Langevin">Langevin dynamics</option>
+    <option value="adapt-v-rescale">Adaptive velocity-rescaling</option>
   </select>.
   <br>
 
